# jogo_inf1202

./: CMakeLists.txt  Makefile  oi.txt  planejamento.txt
Map/: FASE 1.txt  FASE 2.txt  FASE 3.txt  Naodeu.txt  fase_2.txt  salva jogo.txt  salva jogo1.txt
build_codeblocks/: CMakeCache.txt  Makefile  OMago.cbp  cmake_install.cmake
include/: character.h  env.h  game.h  geometry.h  graphics.h  input.h  level.h  menu.h
save_game/: game.save
src/: CMakeCache.txt  Makefile  OMago.cbp  OMago.layout  character.c  cmake_install.cmake  env.c  game.c  geometry.c  graphics.c  input.c  level.c  main.c  menu.c
